--- a/shared.css
+++ b/shared.css
@@ -1,4 +1,31 @@
-.navbar-edit {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+@font-face {
+    font-family: 'Disco';
+    /* Custom name for the font */
+    src: url('/fonts/DISCO___.ttf') format('truetype');
+    /* Path to the TTF file */
+}
+
+.navbar {
+    padding: 25px 0;
+}
+
+.navbar-brand {
+    font-family: 'Disco';
+    letter-spacing: 5px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
+.nav-item {
+    font-size: 19px;
+}
+
+.navbar-nav:hover a {
+    color: #A9A9A9 !important;
+}
+
+.navbar-nav:hover a:hover {
+    color: #F4F5FA !important;
+    animation: myfirst 2s 1;
 }
