--- a/shared.css
+++ b/shared.css
@@ -15,10 +15,11 @@
     font-weight: bolder;
     text-transform: uppercase;
     font-size: 25px;
+    line-height: 2;
 }
 
 .nav-item {
-    font-size: 19px;
+    font-size: 20px;
 }
 
 .navbar-nav:hover a {
