--- a/shared.css
+++ b/shared.css
@@ -1,32 +1,79 @@
 @font-face {
     font-family: 'Disco';
-    /* Custom name for the font */
     src: url('/fonts/DISCO___.ttf') format('truetype');
-    /* Path to the TTF file */
+}
+
+body {
+    font-family: 'Instrument Sans', sans-serif;
+}
+
+nav {
+    padding: 0 !important;
 }
 
 .navbar {
-    padding: 25px 0;
+    padding: 0.5rem 0;
+    display: flex;
+    align-items: center;
 }
 
 .navbar-brand {
-    font-family: 'Disco';
-    letter-spacing: 5px;
+    font-family: 'Disco' !important;
+    letter-spacing: 0.3rem;
     font-weight: bolder;
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 1.6rem;
     line-height: 2;
+    color: #F4F5FA;
+    padding: 0;
+    margin: 0;
+}
+
+.navbar-brand:hover {
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
+    -webkit-mask-size: 200%;
+    animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+    from {
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        -webkit-mask-position: -50%;
+    }
 }
 
 .nav-item {
-    font-size: 20px;
+    font-size: 1.3rem;
+    color: #F4F5FA;
+    letter-spacing: 2px;
+    cursor: pointer;
+    line-height: 2.9;
+    transition: 0.5s;
+    margin-left: 2rem;
+}
+
+.navbar-nav:hover a:hover {
+    color: #F08080 !important;
+    text-shadow: 0 0 5px #c81616,
+        0 0 25px #c81616,
+        0 0 50px #c81616,
+        0 0 100px #c81616;
 }
 
 .navbar-nav:hover a {
     color: #A9A9A9 !important;
 }
 
-.navbar-nav:hover a:hover {
-    color: #F4F5FA !important;
-    animation: myfirst 2s 1;
+.material-symbols-outlined {
+    font-size: 2rem !important;
+    width: 2rem !important;
+    height: 2rem !important;
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 4500,
+        'GRAD' 0,
+        'opsz' 48;
 }
