--- a/shared.css
+++ b/shared.css
@@ -24,15 +24,33 @@ nav {
     text-transform: uppercase;
     font-size: 1.6rem;
     line-height: 2;
-    color: #F4F5FA;
+    color: #F4F5FA !important;
     padding: 0;
     margin: 0;
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
+    -webkit-mask-size: 200%;
+    animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+    from {
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        -webkit-mask-position: -50%;
+    }
 }
 
 .navbar-brand:hover {
     -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
     -webkit-mask-size: 200%;
     animation: shine 2s infinite;
+    color: #F08080 !important;
+    text-shadow: 1px 1px 5px rgb(200, 22, 22),
+        1px 1px 25px #c81616,
+        1px 1px 50px #c81616,
+        1px 1px 100px #c81616;
 }
 
 @-webkit-keyframes shine {
@@ -52,12 +70,12 @@ nav {
     cursor: pointer;
     line-height: 2.9;
     transition: 0.5s;
-    margin-left: 2rem;
+
 }
 
 .navbar-nav:hover a:hover {
     color: #F08080 !important;
-    text-shadow: 0 0 5px #c81616,
+    text-shadow: 0 0 5px rgb(200, 22, 22),
         0 0 25px #c81616,
         0 0 50px #c81616,
         0 0 100px #c81616;
