--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: "Poppins";
+    background-color: #444444;
 }
 
 .container {
@@ -30,7 +31,7 @@ nav {
     text-transform: uppercase;
     font-size: 1.6rem;
     line-height: 2;
-    color: #F4F5FA !important;
+    color: #fff !important;
     padding: 0;
     margin: 0;
     -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
@@ -71,7 +72,7 @@ nav {
 
 .nav-item {
     font-size: 1.3rem;
-    color: #F4F5FA;
+    color: #fff;
     letter-spacing: 2px;
     cursor: pointer;
     line-height: 2.9;
