--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 }
 
 .edit-h1-setion-one {
-    color: #F4F5FA !important;
+    color: #fff !important;
     font-size: 2.6rem;
     font-weight: bolder;
+    margin-bottom: 1.5rem;
 }
 
 .edit-p-section-one {
-    color: #F4F5FA !important;
+    color: #fff !important;
 }
 
 .line-1 {
@@ -48,4 +49,8 @@
     to {
         border-right-color: transparent;
     }
+}
+
+#edit-button-section-one {
+    border-radius: 3px;
 }
