--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+body {
+    overflow-y: scroll;
+
+
+}
+
+#img-right {
+
+    width: auto;
+    height: 500px;
+    width: 44rem;
+    position: absolute;
+    right: 0;
+    top: 10rem;
+
+
+
+}
+
 .edit-section-one {
     position: relative;
     top: 9rem;
@@ -53,4 +72,8 @@
 
 #edit-button-section-one {
     border-radius: 3px;
+}
+
+#first-section {
+    height: 50rem;
 }
