--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ header {
 }
 
 #first-section {
-    height: 37.1rem;
+    height: 42rem;
     background-color: #111111;
-    
+
 
 }
 
@@ -104,62 +104,80 @@ header {
     transition: .5s all;
 
 }
+
 .nft hr {
     width: 100%;
     border: none;
     border-bottom: 1px solid #88888855;
-    margin-top: 0; }
+    margin-top: 0;
+}
+
 .nft ins {
-    text-decoration: none; }
+    text-decoration: none;
+}
+
 .nft .main {
     display: flex;
     flex-direction: column;
     width: 100%;
     padding: 1rem;
     margin: 0 !important;
-    }
+}
+
 .nft .main .tokenImage {
     border-radius: .5rem;
     max-width: 100%;
     height: 250px;
-    object-fit: cover; 
+    object-fit: cover;
 }
+
 .nft .main .description {
     margin: .5rem 0;
-    color: #a89ec9; 
+    color: #a89ec9;
 }
+
 .nft .main .tokenInfo {
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
 }
+
 .nft .main .tokenInfo .price {
     display: flex;
     align-items: center;
     color: #ee83e5;
-    font-weight: 700; }
+    font-weight: 700;
+}
+
 .nft .main .tokenInfo .price ins {
     margin-left: -.3rem;
-    margin-right: .5rem; 
+    margin-right: .5rem;
 }
+
 .nft .main .tokenInfo .duration {
     display: flex;
     align-items: center;
     color: #a89ec9;
-    margin-right: .2rem; }
+    margin-right: .2rem;
+}
+
 .nft .main .tokenInfo .duration ins {
     margin: .5rem;
-    margin-bottom: .4rem; 
+    margin-bottom: .4rem;
 }
+
 .nft .main .creator {
     display: flex;
     align-items: center;
     margin-top: .2rem;
-    margin-bottom: -.3rem; 
+    margin-bottom: -.3rem;
 }
+
 .nft .main .creator ins {
     color: #a89ec9;
-    text-decoration: none; }
+    text-decoration: none;
+}
+
 .nft .main .creator .wrapper {
     display: flex;
     align-items: center;
@@ -168,14 +186,18 @@ header {
     margin: 0;
     margin-right: .5rem;
     border-radius: 100%;
-    box-shadow: inset 0 0 0 4px #000000aa; }
+    box-shadow: inset 0 0 0 4px #000000aa;
+}
+
 .nft .main .creator .wrapper img {
     border-radius: 100%;
     border: 1px solid #ffffff22;
     width: 2rem;
     height: 2rem;
     object-fit: cover;
-    margin: 0; }
+    margin: 0;
+}
+
 .nft ::before {
     position: fixed;
     content: "";
@@ -184,17 +206,22 @@ header {
     left: -100%;
     transform: rotate(-45deg);
     height: 60rem;
-    transition: .7s all; }
+    transition: .7s all;
+}
+
 .nft:hover {
     border: 1px solid #ffffff44;
     box-shadow: 0 7px 50px 10px #000000aa;
     transform: scale(1.015);
-    filter: brightness(1.3); }
+    filter: brightness(1.3);
+}
+
 .nft:hover ::before {
     filter: brightness(0.5);
     top: -100%;
-    left: 200%; }
-  
+    left: 200%;
+}
+
 .cards {
     display: flex;
     justify-content: space-between;
@@ -204,10 +231,9 @@ header {
     margin: 2rem auto 2rem auto;
 }
 
-.cards-sideLeft {
-}
+.cards-sideLeft {}
 
-.cards-sideLeft h1{
+.cards-sideLeft h1 {
     font-size: 1.5rem;
 }
 
