--- a/style.css
+++ b/style.css
@@ -107,6 +107,20 @@ header {
     opacity: 1;
 }
 
+#edit-button-section-one:hover::after .arrow-img {
+    transform: translateX(-50%);
+}
+
+.arrow-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    transition: transform 0.5s;
+}
+
 
 #first-section {
     height: 38.1rem;
