--- a/style.css
+++ b/style.css
@@ -81,31 +81,52 @@ header {
     width: 15rem;
     height: 3rem;
     font-size: 1.5rem;
-    transition: transform 0.5s;
-}
-#edit-button-section-one span {
-   
-    transform: translate(-50%, -50%);
-    transition: opacity 0.5s;
-}
-#edit-button-section-one:hover {
+    white-space: nowrap;
+    transition: width 1s cubic-bezier(0.4, 0, 0.2, 1) ;
+  }
+  
+  #edit-button-section-one .button-text {
+    opacity: 1;
+    transition: opacity 0.5s, font-size 0.5s ;
+  }
+  
+  #edit-button-section-one:hover {
     transform: scale(1.1);
-}
-#edit-button-section-one:hover span {
+    width: 3rem;
+  }
+  
+  #edit-button-section-one:hover .button-text {
     opacity: 0;
-}
-#edit-button-section-one::after {
-    content: "";
+
+  }
+  
+  #edit-button-section-one .arrow-img {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 2rem;
+    height: 2rem;
     opacity: 0;
     transition: opacity 0.5s;
-}
-#edit-button-section-one:hover::after {
+  }
+  
+  #edit-button-section-one:hover .arrow-img {
     opacity: 1;
-}
+  }
+  
+  #edit-button-section-one .button-text:not(:hover) {
+    opacity: 1;
+    transition: font-size 1s;
+
+  }
+  
+  #edit-button-section-one:hover .button-text {
+    opacity: 0;
+    font-size: 0rem;
+
+    
+  }
 
 #edit-button-section-one:hover::after .arrow-img {
     transform: translateX(-50%);
