--- a/style.css
+++ b/style.css
@@ -82,25 +82,32 @@ header {
     height: 3rem;
     font-size: 1.5rem;
     white-space: nowrap;
-    transition: width 0.7s cubic-bezier(0.4, 0, 0.2, 1) ;
-  }
-  
-  #edit-button-section-one .button-text {
-    opacity: 1;
-    transition: opacity 0.5s, font-size 0.5s ;
-  }
-  
-  #edit-button-section-one:hover {
+    transition: width 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+#edit-button-section-one:hover {
     transform: scale(1.1);
     width: 3rem;
-  }
-  
-  #edit-button-section-one:hover .button-text {
+}
+
+#edit-button-section-one .button-text {
+    opacity: 1;
+    transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+#edit-button-section-one:hover .button-text {
     opacity: 0;
 
-  }
-  
-  #edit-button-section-one .arrow-img {
+}
+
+#edit-button-section-one:not(:hover) .button-text {
+    transition-delay: 0.25s;
+}
+
+#edit-button-section-one .arrow-img {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -109,38 +116,22 @@ header {
     height: 2rem;
     opacity: 0;
     transition: opacity 0.5s;
-  }
-  
-  #edit-button-section-one:hover .arrow-img {
-    opacity: 1;
-  }
-  
-  #edit-button-section-one .button-text:not(:hover) {
-    opacity: 1;
-    transition: font-size 0.7s;
+}
 
-  }
-  
-  #edit-button-section-one:hover .button-text {
-    opacity: 0;
-    font-size: 0rem;
+#edit-button-section-one:hover .arrow-img {
+    opacity: 1;
+}
 
-    
-  }
+
+
+
+
 
 #edit-button-section-one:hover::after .arrow-img {
     transform: translateX(-50%);
 }
 
-.arrow-img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
-    transition: transform 0.5s;
-}
+
 
 
 #first-section {
