--- a/style.css
+++ b/style.css
@@ -146,158 +146,198 @@ header {
     background-color: white;
 }
 
-/* card design */
-.nft {
-    user-select: none;
-    max-width: 300px;
-    margin: 0 auto;
-    border: 1px solid #ffffff22;
-    background-color: #282c34;
-    background: linear-gradient(0deg, #282c34 0%, rgba(17, 0, 32, 0.5) 100%);
-    box-shadow: 0 7px 20px 5px #00000088;
-    border-radius: .7rem;
-    backdrop-filter: blur(7px);
-    -webkit-backdrop-filter: blur(7px);
-    overflow: hidden;
-    transition: .5s all;
-
+.grid {
+  display: grid;
 }
 
-.nft hr {
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #88888855;
-    margin-top: 0;
+/*==================== CARD PRICING ====================*/
+.card {
+  padding: 3rem 0;
 }
 
-.nft ins {
-    text-decoration: none;
+.card__container {
+  gap: 3rem 1.25rem;
 }
 
-.nft .main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 1rem;
-    margin: 0 !important;
+.card__content {
+  position: relative;
+  background-color: var(--container-color);
+  padding: 2rem 1.5rem 2.5rem;
+  border-radius: 1.75rem;
+  box-shadow: 0 12px 24px hsla(var(--hue-color), 61%, 16%, 0.1);
+  transition: .4s;
 }
 
-.nft .main .tokenImage {
-    border-radius: .5rem;
-    max-width: 100%;
-    height: 250px;
-    object-fit: cover;
+.card__content:hover {
+  box-shadow: 0 16px 24px hsla(var(--hue-color), 61%, 16%, 0.15);
 }
 
-.nft .main .description {
-    margin: .5rem 0;
-    color: #a89ec9;
+.card__header-img {
+  width: 30px;
+  height: 30px;
 }
 
-.nft .main .tokenInfo {
-    display: flex;
-    justify-content: space-between;
+.card__header-circle {
+  width: 40px;
+  height: 40px;
+  background-color: var(--first-color-lighter);
+  border-radius: 50%;
+  margin-bottom: var(--mb-1);
+  place-items: center;
+}
+
+.card__header-subtitle {
+  display: block;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+  text-transform: uppercase;
+  margin-bottom: var(--mb-0-25);
+}
+
+.card__header-title {
+  font-size: var(--biggest-font-size);
+  color: var(--title-color);
+  margin-bottom: var(--mb-1);
+}
+
+.card__pricing {
+  position: absolute;
+  background: linear-gradient(157deg, var(--first-color-light) -12%, var(--first-color) 109%);
+  width: 60px;
+  height: 88px;
+  right: 1.5rem;
+  top: -1rem;
+  padding-top: 1.25rem;
+  text-align: center;
+}
+
+.card__pricing-number {
+  font-family: var(--pricing-font);
+}
+
+.card__pricing-symbol {
+  font-size: var(--smaller-font-size);
+}
+
+.card__pricing-number {
+  font-size: var(--h2-font-size);
+}
+
+.card__pricing-month {
+  display: block;
+  font-size: var(--tiny-font-size);
+}
+
+.card__pricing-number,
+.card__pricing-month {
+  color: var(--white-color);
+}
+
+.card__pricing::after,
+.card__pricing::before {
+  content: '';
+  position: absolute;
+}
+
+.card__pricing::after {
+  width: 100%;
+  height: 14px;
+  background-color: var(--white-color);
+  left: 0;
+  bottom: 0;
+  clip-path: polygon(0 100%, 50% 0, 100% 100%);
+}
+
+.card__pricing::before {
+  width: 14px;
+  height: 16px;
+  background-color: var(--first-color-alt);
+  top: 0;
+  left: -14px;
+  clip-path: polygon(0 100%, 100% 0, 100% 100%);
+}
+
+.card__list {
+  row-gap: .5rem;
+  margin-bottom: var(--mb-2);
+}
+
+.card__list-item {
+  display: flex;
+  align-items: center;
+}
+
+.card__list-icon {
+  font-size: 1.5rem;
+  color: var(--first-color);
+  margin-right: var(--mb-0-5);
+}
+
+.card__button {
+  padding: 1.25rem;
+  border: none;
+  font-size: var(--normal-font-size);
+  border-radius: .5rem;
+  background: linear-gradient(157deg, var(--first-color-light) -12%, var(--first-color) 109%);
+  color: var(--white-color);
+  cursor: pointer;
+  transition: .4s;
+}
+
+.card__button:hover {
+  box-shadow: 0 12px 24px hsla(var(--hue-color), 97%, 54%, 0.2);
+}
+
+/*==================== MEDIA QUERIES ====================*/
+/* For small devices */
+@media screen and (max-width: 320px) {
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+
+  .card__content {
+    padding: 2rem 1.25rem;
+    border-radius: 1rem;
+  }
+}
+
+/* For medium devices */
+@media screen and (min-width: 568px) {
+  .card__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .card__content {
+    grid-template-rows: repeat(2, max-content);
+  }
+
+  .card__button {
+    align-self: flex-end;
+  }
+}
+
+/* For large devices */
+@media screen and (min-width: 968px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .card {
+    height: 100vh;
     align-items: center;
-}
+  }
 
-.nft .main .tokenInfo .price {
-    display: flex;
-    align-items: center;
-    color: #ee83e5;
-    font-weight: 700;
-}
+  .card__container {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
-.nft .main .tokenInfo .price ins {
-    margin-left: -.3rem;
-    margin-right: .5rem;
-}
+  .card__header-circle {
+    margin-bottom: var(--mb-1-25);
+  }
 
-.nft .main .tokenInfo .duration {
-    display: flex;
-    align-items: center;
-    color: #a89ec9;
-    margin-right: .2rem;
-}
-
-.nft .main .tokenInfo .duration ins {
-    margin: .5rem;
-    margin-bottom: .4rem;
-}
-
-.nft .main .creator {
-    display: flex;
-    align-items: center;
-    margin-top: .2rem;
-    margin-bottom: -.3rem;
-}
-
-.nft .main .creator ins {
-    color: #a89ec9;
-    text-decoration: none;
-}
-
-.nft .main .creator .wrapper {
-    display: flex;
-    align-items: center;
-    border: 1px solid #ffffff22;
-    padding: .3rem;
-    margin: 0;
-    margin-right: .5rem;
-    border-radius: 100%;
-    box-shadow: inset 0 0 0 4px #000000aa;
-}
-
-.nft .main .creator .wrapper img {
-    border-radius: 100%;
-    border: 1px solid #ffffff22;
-    width: 2rem;
-    height: 2rem;
-    object-fit: cover;
-    margin: 0;
-}
-
-.nft ::before {
-    position: fixed;
-    content: "";
-    box-shadow: 0 0 100px 40px #ffffff08;
-    top: -10%;
-    left: -100%;
-    transform: rotate(-45deg);
-    height: 60rem;
-    transition: .7s all;
-}
-
-.nft:hover {
-    border: 1px solid #ffffff44;
-    box-shadow: 0 7px 50px 10px #000000aa;
-    transform: scale(1.015);
-    filter: brightness(1.3);
-}
-
-.nft:hover ::before {
-    filter: brightness(0.5);
-    top: -100%;
-    left: 200%;
-}
-
-.cards {
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem;
-    list-style: none;
-    padding: 0;
-    margin: 2rem auto 2rem auto;
-}
-
-.cards-sideLeft {}
-
-.cards-sideLeft h1 {
-    font-size: 1.5rem;
-}
-
-#cards-left-text {
-    font-size: 1.2rem;
-    line-height: 2rem;
-    margin-top: 1rem;
-    width: 88%;
+  .card__header-subtitle {
+    font-size: var(--small-font-size);
+  }
 }
