--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ header {
     flex-direction: row;
 }
 .pricing-table {
-	background: #f5f5f5;
+	background: #c81616;
 	box-shadow: 0px 1px 10px -6px rgba(0, 0, 0, .15);
 	padding: 2rem;
 	border-radius: 4px;
@@ -177,9 +177,10 @@ header {
 }
 
 .pricing-table h2 {
-	color: #3b3b3b;
+	color: #fff;
 	font-size: 24px;
 	font-weight: 500;
+    text-align: center;
 }
 
 .pricing-table h5 {
@@ -206,7 +207,7 @@ header {
 }
 
 .pricing-table 	.price-tag {
-	margin-top: 2rem;
+	/* margin-top: 2rem; */
 	text-align: center;
 	font-weight: 500;
 }
@@ -221,7 +222,7 @@ header {
 }
 
 .pricing-table .price-tag .after {
-	color: #3b3b3b;
+	color: #fff;
 	font-weight: 500;
 }
 
@@ -246,7 +247,7 @@ header {
 }
 
 .purple .price-tag {
-	color: #627afe;
+	color: #fff;
 }
 
 .purple .price-button {
@@ -263,7 +264,7 @@ header {
 }
 
 .turquoise .price-tag {
-	color: #44cdd2;
+	color: #fff;
 }
 
 .turquoise .price-button {
@@ -280,15 +281,15 @@ header {
 }
 
 .red .price-tag {
-	color: #ff5e5e;
+	color: #fff;
 }
 
 .red .price-button {
-	background: #ff5e5e;
+	background: #fff;
 }
 
 .red .price-button:hover {
-	background: #f23c3c;
+	background: #fff;
 }
 
 /* footer */
