--- a/shared.css
+++ b/shared.css
@@ -19,10 +19,13 @@ nav {
     padding: 0 !important;
 }
 
+/* Add these styles to your existing CSS code */
+
 .navbar {
-    padding: 0.5rem 0;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    padding: 0.5rem 0;
 }
 
 .navbar-brand {
@@ -39,6 +42,9 @@ nav {
     -webkit-mask-size: 200%;
     animation: shine 2s infinite;
 }
+
+/* Add the rest of your existing CSS code here */
+
 
 @-webkit-keyframes shine {
     from {
@@ -73,13 +79,12 @@ nav {
 
 .phoenix-logo {
     position: relative;
-    left: 20px;
 }
 
 .navbar-logo {
     position: relative;
     z-index: 1;
-    
+    left: 50%;
 }
 
 .nav-item {
@@ -102,6 +107,22 @@ nav {
 
 .navbar-nav:hover a {
     color: #A9A9A9 !important;
+}
+
+.justify-content-start {
+    margin: 0;
+    padding: 0;
+}
+
+.justify-content-center {
+    margin: 0;
+    padding: 0;
+    
+}
+
+.justify-content-end {
+    margin: 0;
+    padding: 0;
 }
 
 .material-symbols-outlined {
