--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ header {
 
 #second-section {
     
-    margin-top: 2rem;
+    padding-top: 2rem;
 }
 
 /* sticky design */
@@ -189,7 +189,7 @@ header {
 }
 
 .pricing-table {
-	background: #c81616;
+	background: rgb(200, 22, 22);
 	box-shadow: 0px 1px 10px -6px rgba(0, 0, 0, .15);
 	padding: 2rem;
 	border-radius: 4px;
@@ -298,3 +298,93 @@ header {
 
 
 /* footer */
+
+footer {
+    margin-top: 4rem;
+}
+
+.waves {
+    position:relative;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+    z-index: 1;
+  }
+  
+  .content {
+    position:relative;
+    height: 35vh;
+    text-align:center;
+    background-color: rgb(200, 22, 22);
+    z-index: 1;
+
+  }
+  
+  /* Animation */
+  
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .waves {
+      height:40px;
+      min-height:40px;
+    }
+    .content {
+      height:30vh;
+    }
+    h1 {
+      font-size:24px;
+    }
+  }
+
+.fa-instagram {
+    margin-top: 4rem;
+}
+
+.fa-instagram:hover{
+    color: #F08080 !important;
+}
+
+.itemList-footer {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+    gap: 3.5rem;
+    margin-top: 1.5rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.copyright {
+    margin-top: 1.5rem;
+}
