--- a/shared.css
+++ b/shared.css
@@ -11,21 +11,22 @@ body {
 
 .container {
     padding: 0;
-    padding-top: 20px;
-    justify-content: space-between !important;
+    
+    justify-content: center !important;
 }
 
 nav {
     padding: 0 !important;
+    margin-top: 10px;
 }
 
 /* Add these styles to your existing CSS code */
 
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center !important;
     align-items: center;
-    padding: 0.5rem 0;
+    
 }
 
 .navbar-brand {
@@ -84,7 +85,7 @@ nav {
 .navbar-logo {
     position: relative;
     z-index: 1;
-    left: 30%;
+    
     
 }
 
@@ -110,7 +111,7 @@ nav {
     color: #A9A9A9 !important;
 }
 
-.justify-content-start {
+/* .justify-content-start {
     margin: 0;
     padding: 0;
 }
@@ -124,6 +125,19 @@ nav {
 .justify-content-end {
     margin: 0;
     padding: 0;
+} */
+
+.navUl {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.phoenix-text {
+    text-align: center;
+    font-weight: 600;
+    color: #c81616;
+    margin-top: -20px;
 }
 
 .material-symbols-outlined {
