--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 .edit-section-one {
     position: relative;
     margin: 0 auto;
-    top: 3.5rem;
+    top: 5rem;
     
 }
 
@@ -376,23 +376,41 @@ footer {
   }
 
 .fa-instagram {
-    margin-top: 4rem;
+    margin-top: -4rem !important;
 }
 
 .fa-instagram:hover{
     color: #F08080 !important;
 }
 
-.itemList-footer {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    justify-content: center;
-    gap: 3.5rem;
-    margin-top: 1.5rem;
+.footer-text {
+    
+    
+    /* margin-top: 1.5rem; */
     cursor: pointer;
     font-size: 1.5rem;
     font-weight: 600;
+    text-align: center;
+    color: white;
+    padding-top: 3rem;
+}
+
+.curved-arrows {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+    width: 165px;
+    margin: -2rem auto 0 auto;
+    padding: 0;
+    
+}
+
+.curved-arrows li {
+    font-size: 4rem;
+    color: white;
+    height: 85px;
 }
 
 .copyright {
