--- a/shared.css
+++ b/shared.css
@@ -57,7 +57,7 @@ nav {
     }
 }
 
-.navbar-brand:hover {
+.navUl:hover .navbar-brand {
     -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
     -webkit-mask-size: 200%;
     animation: shine 2s infinite;
