--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 .edit-section-one {
     position: relative;
     margin: 0 auto;
-    top: 5rem;
+    top: 6rem;
     
 }
 
@@ -85,6 +85,7 @@ header {
     font-size: 1.5rem;
     white-space: nowrap;
     transition: width 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+    margin-top: 0.5rem;
 }
 
 
@@ -387,7 +388,7 @@ footer {
     
     
     /* margin-top: 1.5rem; */
-    cursor: pointer;
+    
     font-size: 1.5rem;
     font-weight: 600;
     text-align: center;
