--- a/shared.css
+++ b/shared.css
@@ -11,7 +11,7 @@ body {
 
 .container {
     padding: 0;
-    
+
     justify-content: center !important;
 }
 
@@ -26,7 +26,7 @@ nav {
     display: flex;
     justify-content: center !important;
     align-items: center;
-    
+
 }
 
 .navbar-brand {
@@ -85,8 +85,8 @@ nav {
 .navbar-logo {
     position: relative;
     z-index: 1;
-    
-    
+
+
 }
 
 .nav-item {
@@ -132,7 +132,7 @@ nav {
     flex-direction: column;
     margin: 0;
     padding: 0;
-    
+
 }
 
 .phoenix-text {
@@ -152,4 +152,56 @@ nav {
         'wght' 4500,
         'GRAD' 0,
         'opsz' 48;
+}
+
+/* responsive navbar*/
+
+.container {
+    max-width: 1536px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+/* 2xl */
+@media (max-width: 1536px) {
+    .container {
+        max-width: 1280px;
+    }
+}
+
+/* xl */
+@media (max-width: 1280px) {
+    .container {
+        max-width: 1024px;
+    }
+}
+
+/* lg */
+@media (max-width: 1024px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+/* md */
+@media (max-width: 768px) {
+    .container {
+        max-width: 640px;
+    }
+}
+
+/* sm */
+@media (max-width: 640px) {
+    .container {
+        max-width: 475px;
+    }
+}
+
+/* xs */
+@media (max-width: 475px) {
+    .container {
+        width: 100%;
+    }
 }
